--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "SF Mono", "Courier New", monospace;
+  font-family: "Space Mono", "Courier New", monospace;
 }
 
 body {
